# dish-scraper

./: Cargo.toml  README.md  rust-toolchain.toml
output/: episodes.json
src/: err.rs  main.rs
src/dish/: edge_filter.rs  feed.rs  mod.rs  site.rs
