[package]
edition = "2021"
name = "dish-graph"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.23", features = ["serde"]}
daggy = "0.8.0"
dtparse = "1.3.0"
petgraph = "0.6.3"
regex = "1.7.1"
reqwest = {version = "0.11.14", features = ["json"]}
rss = "2.0.2"
scraper = "0.15.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0.93"
tokio = {version = "1.25.0", features = ["full"]}
